--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <header>
-    <img src="CounselMore.jpg" alt="CounselMore Logo" />
+    <img src="images/logo.png" alt="Logo" style="border-radius: 50%; width: 100px; height: 100px;">
     <h1>CounselMore</h1>
     <p>Your partner in smarter, streamlined college counseling.</p>
     <div class="nav-links">
