--- a/services.html
+++ b/services.html
@@ -101,7 +101,17 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="CounselMore Logo" />
+  <img src="CounselMore.jpg" alt="CounselMore Logo" class="logo" />
+  <h1>Our Services</h1>
+</header>
+<style>
+  .logo {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+</style>
     <h1>CounselMore</h1>
     <p>Your partner in smarter, streamlined college counseling.</p>
     <div class="nav-links">
