--- a/admissions-tracking.html
+++ b/admissions-tracking.html
@@ -21,6 +21,7 @@
     header img {
       max-width: 120px;
       margin-bottom: 0.5rem;
+      border-radius: 50%; /* Makes the logo rounded */
     }
     .nav-links {
       margin-top: 10px;
