--- a/services.html
+++ b/services.html
@@ -21,6 +21,7 @@
     header img {
       max-width: 120px;
       margin-bottom: 0.5rem;
+      border-radius: 50%; /* Makes the logo rounded */
     }
     .nav-links {
       margin-top: 10px;
@@ -101,17 +102,7 @@
 </head>
 <body>
   <header>
-  <img src="CounselMore.jpg" alt="CounselMore Logo" class="logo" />
-  <h1>Our Services</h1>
-</header>
-<style>
-  .logo {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-  }
-</style>
+    <img src="images/logo.png" alt="CounselMore Logo" />
     <h1>CounselMore</h1>
     <p>Your partner in smarter, streamlined college counseling.</p>
     <div class="nav-links">
