--- a/about.html
+++ b/about.html
@@ -19,7 +19,9 @@
       text-align: center;
     }
     header img {
-      max-width: 120px;
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
       margin-bottom: 0.5rem;
     }
     .nav-links {
@@ -69,7 +71,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Logo" style="border-radius: 50%; width: 100px; height: 100px;">
+    <img src="images/CounselMore.jpg" alt="CounselMore Logo">
     <h1>CounselMore</h1>
     <p>Your partner in smarter, streamlined college counseling.</p>
     <div class="nav-links">
