--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 </head>
 <body>
   <header>
-    <img src="images/CounselMore.jpg" alt="CounselMore Logo">
+    <img src="CounselMore.jpg" alt="CounselMore Logo">
     <h1>CounselMore</h1>
     <p>Your partner in smarter, streamlined college counseling.</p>
     <div class="nav-links">
