--- a/services.html
+++ b/services.html
@@ -102,7 +102,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="CounselMore Logo" />
+    <img src="CounselMore.jpg" alt="CounselMore Logo" />
     <h1>CounselMore</h1>
     <p>Your partner in smarter, streamlined college counseling.</p>
     <div class="nav-links">
