--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
   <main>
     <form action="https://formsubmit.co/halent30@yahoo.com" method="POST">
       <!-- Replace with your actual GitHub username -->
-      <input type="hidden" name="_next" value="https://h-t117.github.io/WebDev/success.html">
+      <input type="hidden" name="_next" value="https://h-t117.github.io/success.html">
       
       <label for="name">Name</label>
       <input type="text" id="name" name="name" required />
