--- a/about.html
+++ b/about.html
@@ -70,18 +70,14 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="CounselMore.jpg" alt="CounselMore Logo">
-    <h1>CounselMore</h1>
-    <p>Your partner in smarter, streamlined college counseling.</p>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="index.html#contact">Contact</a>
-      <a href="index.html#resources">Resources</a>
-    </div>
-  </header>
+  <div id="navbar"></div>
+<script>
+  fetch('navbar.html')
+    .then(r => r.text())
+    .then(html => { document.getElementById('navbar').innerHTML = html; })
+    .catch(err => console.error('Navbar load failed:', err));
+</script>
+
   
   <div class="content">
     <h2>About CounselMore</h2>
