--- a/index.html
+++ b/index.html
@@ -149,18 +149,14 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="CounselMore.jpg" alt="CounselMore Logo" />
-    <h1>CounselMore</h1>
-    <p>Your partner in smarter, streamlined college counseling.</p>
-    <div class="nav-links">
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="contact.html">Contact</a>
-      <a href="resources.html">Resources</a>
-    </div>
-  </header>
+  <div id="navbar"></div>
+  <script>
+    fetch('navbar.html')
+      .then(r => r.text())
+      .then(html => { document.getElementById('navbar').innerHTML = html; })
+      .catch(err => console.error('Navbar load failed:', err));
+  </script>
+  
 
   <main>
     <section id="about">
