--- a/resources.html
+++ b/resources.html
@@ -75,18 +75,13 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="CounselMore.jpg" alt="CounselMore Logo" />
-    <h1>CounselMore</h1>
-    <p>Your partner in smarter, streamlined college counseling.</p>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="index.html#contact">Contact</a>
-    </div>
-  </header>
+  <div id="navbar"></div>
+  <script>
+    fetch('navbar.html')
+      .then(r => r.text())
+      .then(html => { document.getElementById('navbar').innerHTML = html; })
+      .catch(err => console.error('Navbar load failed:', err));
+  </script>
   
   <div class="content">
     <h2>Resources</h2>
